chore: add PR validation job

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script type="module">
           window.AMPLITUDE_API_KEY = import.meta.env.VITE_AMPLITUDE_API_KEY;
         </script>
-        <script defer src="libs/mock-data/kitchen-sink.js"></script>
+        <script defer src="libs/mock-data/kitchen-sink.ts"></script>
         <script defer src="libs/gtm-polyfill.js"></script>
         <script defer src="libs/sandboxed-js.js"></script>
     </body>
