feat: upgrade analytics-browser version

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <body>
         <h1>GTM Template test page</h1>
         <p>Look at console in devtools to test manually</p>
+        <button>Rage or dead click me</button>
         <script type="module">
           window.AMPLITUDE_API_KEY = import.meta.env.VITE_AMPLITUDE_API_KEY;
         </script>
